# gi-gen

./: Cargo.toml  README.md  USAGE.md
src/: app.rs  args.rs  gitignore_api.rs  main.rs  tui.rs  util.rs
src/app/: list_state_wrapper.rs  panes.rs  popups.rs  styles.rs  widgets.rs
src/app/panes/: filter.rs  task_bar.rs  template_list.rs
src/app/popups/: about.rs  error.rs  help.rs  save_option.rs
src/app/widgets/: filter.rs  key_button.rs  task_action.rs  task_bar.rs
src/gitignore_api/: error.rs
src/tui/: event.rs
