[package]
name = "gi-gen"
version = "0.1.0"
edition = "2021"
authors = ["Paul Sobolik <psobolik@zoho.com>"]
description = "Generate .gitingore file using gitignore.io API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.26"
regex = "1.10"
reqwest = "0.12"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
